fix: ECOM404RS-85 / Correct Nav display on smaller widths

--- a/src/app/components/header/burger-button/burger-button.scss
+++ b/src/app/components/header/burger-button/burger-button.scss
@@ -28,7 +28,7 @@
     }
   }
 
-  @media screen and (width <= 610px) {
+  @media screen and (width <= 630px) {
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
